--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
+altgraph==0.17.3
 certifi==2022.12.7
 charset-normalizer==3.0.1
 comtypes==1.1.14
 idna==3.4
 numpy==1.24.2
 pandas==1.5.3
+pefile==2023.2.7
 Pillow==9.4.0
 plotly==5.13.1
 psutil==5.9.4
+pyinstaller==5.8.0
+pyinstaller-hooks-contrib==2023.0
 python-dateutil==2.8.2
 pytz==2022.7.1
 pywin32==305
+pywin32-ctypes==0.2.0
 pywinauto==0.6.8
 requests==2.28.2
 six==1.16.0
